starlark-rust/starlark/src/typing/tests/golden/type_kwargs.golden
# @generated
# To regenerate, run:
# ```
# STARLARK_RUST_REGENERATE_GOLDEN_TESTS=1 cargo test -p starlark --lib
# ```

Code:
def foo(**kwargs):
    pass

def bar():
    foo(**{1: "x"})

Error:
error: Expected type `dict[str, typing.Any]` but got `dict[int, str]`
 --> filename:6:11
  |
6 |     foo(**{1: "x"})
  |           ^^^^^^^^
  |

Compiler typechecker (eval):
error: Expected type `dict[str, typing.Any]` but got `dict[int, str]`
 --> filename:6:11
  |
6 |     foo(**{1: "x"})
  |           ^^^^^^^^
  |
